--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <div class="container__cards">
             <div class="card">
               <div class="cover">
-                <img src="img/p1.png" alt="" />
+                <img src="./img/p1.png" alt="" />
                 <div class="img__back"></div>
               </div>
               <div class="description">
@@ -107,7 +107,7 @@
 
             <div class="card">
               <div class="cover">
-                <img src="img/p2.png" alt="" />
+                <img src="./img/p2.png" alt="" />
                 <div class="img__back"></div>
               </div>
               <div class="description">
@@ -121,7 +121,7 @@
 
             <div class="card">
               <div class="cover">
-                <img src="img/p3.png" alt="" />
+                <img src="./img/p3.png" alt="" />
                 <div class="img__back"></div>
               </div>
               <div class="description">
@@ -138,7 +138,7 @@
       <section id="sobre-nosotros" class="contenedor sobre-nosotros">
         <h2 class="titulo">Nuestro producto</h2>
         <div class="contenedor-sobre-nosotros">
-          <img src="/img/ilustracion.jpg" alt="" class="imagen-about-us" />
+          <img src="./img/ilustracion.jpg" alt="" class="imagen-about-us" />
           <div class="contenido-textos">
             <h3><span>1</span>Los mejores productos</h3>
             <p>
@@ -173,22 +173,22 @@
           </div>
           <div class="datos-contacto">
             <div class="dato-contacto">
-              <img src="/img/facebook.png" />
+              <img src="./img/facebook.png" />
               <p>La Cafeteria</p>
             </div>
 
             <div class="dato-contacto">
-              <img src="/img/instagram.png" />
+              <img src="./img/instagram.png" />
               <p>@La_Cafeteria</p>
             </div>
 
             <div class="dato-contacto">
-              <img src="/img/whatsapp.png" />
+              <img src="./img/whatsapp.png" />
               <p>(+503) 7876-3210</p>
             </div>
 
             <div class="dato-contacto">
-              <img src="/img/telefono.png" />
+              <img src="./img/telefono.png" />
               <p>(+503) 7654-3210</p>
             </div>
           </div>
