--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     ></script>
 
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="icon" href="./img/coffee.ico" />
     <title>Document</title>
   </head>
   <body>
